# GraphicsCalculator

./: CMakeLists.txt  DrawPanel.cpp  DrawPanel.h  DrawPanelPrivate.h  FunctionDefinitions.h  LinerArgumentsGenerator.cpp  LinerArgumentsGenerator.h  LinerArgumentsGeneratorPrivate.h  MainWindow.cpp  MainWindow.h  MainWindowPrivate.h  README.md
